Fri 23 June 2017 (fetch, promise, jQuery)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
+<div class="header">
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Index</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Email</th>
+      </tr>
+      <tbody>
+      </tbody>
+    </thead>
+  </table>
 
-<script src="promise.js"></script>
+</div>
+<button>Add New Student</button>
+<script src="main.js"></script>
 
 </body>
 </html>
