--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
+  <input name="name" placeholder="Name" />
+  <input name="age" placeholder="Age" />
+  <input name="email" placeholder="Email" />
+  <button>Add New Student</button>
+
 <div class="header">
   <table border="1">
     <thead>
@@ -21,7 +26,6 @@
   </table>
 
 </div>
-<button>Add New Student</button>
 <script src="main.js"></script>
 
 </body>
